# traffic-lights

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
model/: CMakeLists.txt  stub.cpp
model/include/: Car.hpp  Crossroad.hpp  CubicSpline.hpp  CubicSpline2.hpp  Node.hpp  Numeric.hpp  Path.hpp  TrafficLights.hpp  Vector2.hpp
ncurses-app/: CMakeLists.txt  Color.hpp  CrossroadRenderer.hpp  Image.hpp  ImageStorage.hpp  LoggerIncludes.hpp  NCursesIncludes.hpp  Pixel.hpp  main.cpp
ncurses-app/assets/crossroads/: crossroad1.json
ncurses-app/assets/images/car/0/: background-colors.txt  characters.txt  colors.txt  metadata.json
ncurses-app/assets/images/car/180/: characters.txt  colors.txt  metadata.json
ncurses-app/assets/images/car/270/: background-colors.txt  characters.txt  colors.txt  metadata.json
ncurses-app/assets/images/car/90/: characters.txt  colors.txt  metadata.json
ncurses-app/assets/images/crossroad1/: background-colors.txt  characters.txt  colors.txt  metadata.json
ncurses-app/assets/images/test/: background-colors.txt  characters.txt  colors.txt  metadata.json
ncurses-app/assets/images/traffic-lights/0/casing/: background-colors.txt  characters.txt  colors.txt  metadata.json
ncurses-app/assets/images/traffic-lights/0/green/: characters.txt  metadata.json
ncurses-app/assets/images/traffic-lights/0/red/: characters.txt  metadata.json
ncurses-app/assets/images/traffic-lights/0/yellow/: characters.txt  colors.txt  metadata.json
ncurses-app/assets/images/traffic-lights/180/casing/: background-colors.txt  characters.txt  colors.txt  metadata.json
ncurses-app/assets/images/traffic-lights/180/green/: colors.txt  metadata.json
ncurses-app/assets/images/traffic-lights/180/red/: characters.txt  colors.txt  metadata.json
ncurses-app/assets/images/traffic-lights/180/yellow/: characters.txt  colors.txt  metadata.json
ncurses-app/assets/images/traffic-lights/270/casing/: background-colors.txt  characters.txt  colors.txt  metadata.json
ncurses-app/assets/images/traffic-lights/270/green/: characters.txt  colors.txt  metadata.json
ncurses-app/assets/images/traffic-lights/270/red/: colors.txt  metadata.json
ncurses-app/assets/images/traffic-lights/270/yellow/: characters.txt  colors.txt  metadata.json
ncurses-app/assets/images/traffic-lights/90/casing/: background-colors.txt  characters.txt  colors.txt  metadata.json
ncurses-app/assets/images/traffic-lights/90/green/: metadata.json
ncurses-app/assets/images/traffic-lights/90/red/: characters.txt  colors.txt  metadata.json
ncurses-app/assets/images/traffic-lights/90/yellow/: characters.txt  colors.txt  metadata.json
qt-app/: CMakeLists.txt  MyWindow.cpp  MyWindow.hpp  main.cpp
sfml-app/: CMakeLists.txt  CrossroadRenderer.hpp  main.cpp
